--- a/installer/rules_fish/BUILD.fish.bazel
+++ b/installer/rules_fish/BUILD.fish.bazel
@@ -18,12 +18,17 @@ cmake(
         "-DFISH_USE_SYSTEM_PCRE2=ON",  # controls whether cmake will git fetch pcre2 and build it or if ON, use provided pcre2
         "-DMAC_CODESIGN_ID=OFF",
         "-DWITH_GETTEXT=OFF",
-        "-DSYS_PCRE2_LIB=$(execpath @fish_toolchains//pcre2:pcre2)",
+        "-DSYS_PCRE2_LIB=$(execpath @fish_toolchains//pcre2:pcre2_static)",
+        # "-DSYS_PCRE2_LIB=$(execpath @fish_toolchains//pcre2:pcre2)",
+        # "-DSYS_PCRE2_LIB=$(execpaths @fish_toolchains//pcre2:pcre2)", # TODO: this is giving something more like rootpath which doesn't work.
         # "-DCMAKE_INSTALL_PREFIX=.",
     ],
     # TODO: can we drop external repo name?
     deps = [
         "@fish_toolchains//pcre2:pcre2",
+    ],
+    data = [
+        "@fish_toolchains//pcre2:pcre2_static",
     ],
     # TODO: how to fully capture outputs from make install? Will need share/ output for a lot of functionality.
     install = True,
