add fish shell and allow hidden files in helix picker.

--- a/dot_config/helix/config.toml
+++ b/dot_config/helix/config.toml
@@ -1,7 +1,11 @@
 # TODO: can we reconfigure SSH in a way that this isn't needed? Currently colors are wrong over SSH.
 # https://github.com/helix-editor/helix/discussions/6963
 [editor]
+shell = ["fish", "-c"]
 true-color = true
+
+[editor.file-picker]
+hidden = false
 
 [editor.soft-wrap]
 enable = true
