--- a/installer/rules_fish/BUILD.pcre2.bazel
+++ b/installer/rules_fish/BUILD.pcre2.bazel
@@ -1,5 +1,5 @@
 # Forked from https://github.com/PCRE2Project/pcre2/blob/05aafb2e308e5529e3fd5fed45bae253eebed75b/BUILD.bazel
-# with modification to template PCRE2_CODE_UNIT_WIDTH.
+# with modification to template PCRE2_CODE_UNIT_WIDTH, set linkstatic = True, and adding a filegroup for the static archive.
 
 load("@rules_cc//cc:defs.bzl", "cc_library")
 load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
@@ -68,28 +68,7 @@ cc_library(
     includes = ["src"],
     strip_include_prefix = "src",
     visibility = ["//visibility:public"],
-    linkstatic = True,  # TODO: how to disable .pic.a file output?
-)
-
-# bazel cquery @fish_toolchains//pcre2:pcre2 --output=files
-# bazel-out/k8-opt-exec-ST-13d3ddad9198/bin/external/_main~download_fish~fish_toolchains/pcre2/libpcre2.a
-# bazel-out/k8-opt-exec-ST-13d3ddad9198/bin/external/_main~download_fish~fish_toolchains/pcre2/libpcre2.pic.a
-# bazel-out/k8-fastbuild/bin/external/_main~download_fish~fish_toolchains/pcre2/libpcre2.a
-#
-# Oh, we can query and see OutputGroupInfo providers (https://bazel.build/rules/lib/providers/OutputGroupInfo)
-# to see what these are for this cc_library. We tried to make a filegroup() with output_group by file name,
-# but it seems they explicitly set output groups! We can query that - drop keys() to see all the info. providers(target)
-# just returns a dict so you can transform however you need. See query syntax docs.
-# https://bazel.build/query/cquery#defining-the-output-format-using-starlark
-# bazel cquery @fish_toolchains//pcre2:pcre2 --output=starlark --starlark:expr="providers(target).keys()"
-# bazel cquery @fish_toolchains//pcre2:pcre2 --output=starlark --starlark:expr="providers(target)['OutputGroupInfo']"
-
-filegroup(
-    name = "pcre2_static",
-    srcs = [":pcre2"],
-    output_group = "archive",
-    # output_group = "libpcre2.so",
-    visibility = ["//visibility:public"],
+    linkstatic = True,
 )
 
 cc_binary(
@@ -99,25 +78,9 @@ cc_binary(
     deps = [":pcre2"],
 )
 
-# cc_import(
-#     name = "pcre2_static",
-#     static_library = "libpcre2.a",
-# )
-
-# TODO: this expands to no files?
-# filegroup(
-#     name = "pcre2_shared_object",
-#     srcs = [":pcre2"],
-#     output_group = "pcre2/libpcre2.so",
-#     # output_group = "libpcre2.so",
-#     visibility = ["//visibility:public"],
-# )
-
-# TODO: we can't use this as a dep in cmake rules because it doesn't have the same provider info
-# TODO: this is still experimental in rules_cc and will be ported from native rule in the future
-# cc_shared_library(
-#     name = "pcre2_shared",
-#     deps = [":pcre2"],
-#     shared_lib_name = "libpcre2.so",
-#     visibility = ["//visibility:public"],
-# )
+filegroup(
+    name = "pcre2_static",
+    srcs = [":pcre2"],
+    output_group = "archive",
+    visibility = ["//visibility:public"],
+)
