--- a/installer/rules_fish/BUILD.fish.bazel
+++ b/installer/rules_fish/BUILD.fish.bazel
@@ -8,15 +8,17 @@ filegroup(
     srcs = glob(["**"]),
 )
 
+# TODO: improve this build target to get "normal" cmake targets from normal install dirs, but
+# also pulling files from tmpdirs like libfishlib.a and fish_test_helper. They may be useful in the future.
+
 cmake(
     name = "fish",
     lib_source = ":srcs",
     generate_args = [
         "-DFISH_USE_SYSTEM_PCRE2=ON",  # controls whether cmake will git fetch pcre2 and build it or if ON, use provided pcre2
         "-DMAC_CODESIGN_ID=OFF",
-        "-DWITH_GETTEXT=OFF",
+        "-DWITH_GETTEXT=OFF",  # TODO: support gettext as a dep in toolchain
         "-DSYS_PCRE2_LIB=$(execpath //pcre2:pcre2_static)",
-        # "-DCMAKE_INSTALL_PREFIX=.",
     ],
     deps = [
         "//pcre2:pcre2",
@@ -24,25 +26,32 @@ cmake(
     data = [
         "//pcre2:pcre2_static",
     ],
-    # TODO: how to fully capture outputs from make install? Will need share/ output for a lot of functionality.
     install = True,
-    # TODO: how to get cmake to output to a normal directory?
-    out_bin_dir = "../fish.build_tmpdir/",
-    out_lib_dir = "../fish.build_tmpdir/",
     out_binaries = [
         "fish",
         "fish_indent",
         "fish_key_reader",
-        "fish_test_helper",
+        # "fish_test_helper", # TODO: this isn't installed to the copy_fish dir, but may be needed for testing releases...
     ],
     out_shared_libs = [],
-    out_static_libs = ["libfishlib.a"],
+    # out_static_libs = ["libfishlib.a"],
+    out_static_libs = [],
+    # TODO: needs --noincompatible_sandbox_hermetic_tmp
+    # share and etc dirs of data dirs are broken because fish build/install is making symlinks that are broken.
+    # see tracking issue: https://github.com/bazelbuild/rules_foreign_cc/issues/1129
+    # There may be a fix coming in bazel 7.2, but there are some workarounds suggested in the issue.
+    # Our general improvements to the toolchain may resolve the issue too.
+    out_data_dirs = [
+        "etc",
+        "share",
+    ],
 )
 
 config_setting(
     name = "windows",
     constraint_values = ["@platforms//os:windows"],
 )
+
 filegroup(
     name = "fish_bin",
     srcs = [":fish"],
